Merge pull request #12 from DasBabyPixel/1.21.8
- Port project to Minecraft 1.21.8, update dependencies for compatibility
- Upgrade Gradle to 9.0.0 and Loom to 1.11-SNAPSHOT
- Rewrite codebase in Kotlin for maintainability and performance
- Add tags to dynamic registry loading; improve packet dump handling for custom servers
- Fix crashes (e.g., spinnyboi), toasts, and issues with endecs during development
- Address race condition and potential NPE with garbage collector
- Update CI workflows and release actions

---------

Co-authored-by: Uni0305 <71868623+Uni0305@users.noreply.github.com>
Co-authored-by: Lorenz Wrobel <43410952+DasBabyPixel@users.noreply.github.com>